--- a/Climacast_server/package.json
+++ b/Climacast_server/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "dev": "nodemon index.js"
   },
+ 
   "author": "Masereka Benon",
   "license": "MIT",
   "devDependencies": {
     "axios": "^1.6.4",
+    "chai": "^5.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lru-cache": "^10.1.0",
+    "mocha": "^10.2.0",
     "nodemon": "^3.0.2",
-    "redis": "^4.6.12"
+    "redis": "^4.6.12",
+    "sinon": "^17.0.1"
   },
   "dependencies": {
     "cors": "^2.8.5"
